<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:orientation="vertical"
    android:padding="50dp"
    android:background="@color/white"
    tools:context=".RegistrasiActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="35dp"
        android:fontFamily="@font/poppinsextra"
        android:gravity="center"
        android:text="Registrasi"
        android:textColor="@color/black"
        android:textSize="20dp"
        />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:gravity="center"
        android:orientation="vertical"
        android:padding="10dp">


        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            android:inputType="textEmailAddress"
            style="@style/BlackTextInputLayout"
            android:hint="@string/user">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etUsername"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:paddingStart="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="5dp"
            android:layout_marginBottom="5dp"
            style="@style/BlackTextInputLayout"
            android:hint="@string/email">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/etEmail"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:inputType="textEmailAddress"
                android:textColorHint="@color/black"
                android:backgroundTint="@color/black"
                android:textColor="@color/black"
                android:paddingStart="20dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:layout_marginBottom="5dp"
                style="@style/BlackTextInputLayout"
                android:hint="@string/password"
                app:passwordToggleEnabled="true"
                app:passwordToggleTint="@color/black">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/etPassword"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textSize="15sp"
                    android:inputType="textPassword"
                    android:textColorHint="@color/black"
                    android:backgroundTint="@color/black"
                    android:textColor="@color/black"
                    android:paddingStart="20dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <ProgressBar
                android:id="@+id/reg_progress"
                style="@style/Widget.AppCompat.ProgressBar"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:layout_centerInParent="true"
                android:layout_marginTop="8dp"
                android:layout_marginEnd="8dp"
                android:visibility="invisible" />

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">


        </RelativeLayout>

        <Button
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/red"
            android:fontFamily="@font/poppinssemibold"
            android:id="@+id/btnRegister"
            android:text="Registrasi"
            android:textColor="@color/white"
            android:textStyle="bold" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="8dp"
        android:gravity="center"
        android:orientation="horizontal"
        android:padding="2dp"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:gravity="end"
            android:id="@+id/sdh_btn"
            android:text="Sudah Memiliki Akun?"
            android:textColor="@color/black"
            />

        <TextView
            android:id="@+id/login_btn"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:fontFamily="@font/poppinssemibold"
            android:text=" Login"
            android:textColor="@color/black"
            android:textSize="15dp"
            android:layout_marginTop="1dp"
            />
    </LinearLayout>

</LinearLayout>
