<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fillViewport="true"
    android:background="@color/white"
    app:layout_behavior=".HomeActivity">

    <LinearLayout
        android:orientation="vertical"
        android:background="@drawable/bg"
        android:weightSum="10"
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <TextView
            android:id="@+id/Username"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_alignParentBottom="true"
            android:layout_marginStart="5dp"
            android:layout_marginTop="28dp"
            android:layout_marginBottom="60dp"
            android:fontFamily="@font/poppinsextra"
            android:text="Welcome,"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="40sp" />


            <!-- Atas -->
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="10dp"
                android:clipToPadding="false"
                android:gravity="center"
                android:orientation="horizontal">

                <!-- Menu -->
                <androidx.cardview.widget.CardView
                    android:id="@+id/bacabuku"
                    android:layout_width="160dp"
                    android:layout_height="180dp"
                    android:padding="3dp"
                    android:layout_margin="10dp"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/abu"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:src="@drawable/baca"
                            android:layout_marginBottom="15dp"
                            />

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/buku"
                            android:textStyle="bold"
                            android:textSize="15dp"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="10dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>

                <androidx.cardview.widget.CardView
                    android:id="@+id/tentang"
                    android:layout_width="160dp"
                    android:layout_height="180dp"
                    android:padding="3dp"
                    android:layout_margin="10dp"
                    android:clickable="true">
                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:orientation="vertical"
                        android:background="@color/abu"
                        android:gravity="center">
                        <ImageView
                            android:layout_width="150dp"
                            android:layout_height="100dp"
                            android:src="@drawable/about"
                            android:layout_marginBottom="15dp"
                            />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/tentang"
                            android:textStyle="bold"
                            android:textSize="15dp"
                            android:textColor="@android:color/black"
                            android:layout_marginTop="10dp"/>
                    </LinearLayout>
                </androidx.cardview.widget.CardView>
            </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="10dp"
            android:clipToPadding="false"
            android:gravity="center"
            android:orientation="horizontal">

            <!-- Menu -->
            <androidx.cardview.widget.CardView
                android:id="@+id/exit"
                android:layout_width="160dp"
                android:layout_height="180dp"
                android:padding="3dp"
                android:layout_margin="10dp"
                android:clickable="true">
                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="vertical"
                    android:background="@color/abu"
                    android:gravity="center">
                    <ImageView
                        android:layout_width="150dp"
                        android:layout_height="100dp"
                        android:src="@drawable/exit"
                        android:layout_marginBottom="15dp"
                        />

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/exit"
                        android:textStyle="bold"
                        android:textSize="15dp"
                        android:textColor="@android:color/black"
                        android:layout_marginTop="10dp"/>
                </LinearLayout>
            </androidx.cardview.widget.CardView>
        </LinearLayout>

</LinearLayout>
</LinearLayout>